--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Fake Artist Online</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- <meta
+		<meta
 			name="description"
 			content='An online party game based on Oink Games&apos; "A Fake Artist Goes to New York". Draw with your phone or a mouse.'
 		/>
@@ -16,7 +16,7 @@
 			crossorigin
 		></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js" crossorigin></script>
-		<script src="https://code.jquery.com/pep/0.4.3/pep.min.js" crossorigin></script> -->
+		<script src="https://code.jquery.com/pep/0.4.3/pep.min.js" crossorigin></script>
 		<link
 			href="https://fonts.googleapis.com/css?family=Quicksand:500,700|Catamaran:900&display=swap"
 			rel="stylesheet"
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="style.bundle.css" />
 	</head>
 
-	<!-- <body>
+	<body>
 		<div id="wrapper">
 			<home-view v-if="state.view === 'home'"></home-view>
 			<rules-view v-if="state.view === 'rules'"></rules-view>
@@ -45,8 +45,8 @@
 		</div>
 
 		<script src="index.bundle.min.js"></script>
-	</body> -->
-	<body>
+	</body>
+	<!-- <body>
 		<div id="wrapper">
 			<p>
 				I've been contacted by Oink Games and am complying with their requests. Regrettably,
@@ -56,5 +56,5 @@
 				Thanks for playing!
 			</p>
 		</div>
-	</body>
+	</body> -->
 </html>
