--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,10 +26,11 @@
 
 	<body>
 		<div id="wrapper">
+            <access-view v-if="state.view === 'access'"></access-view>
 			<home-view v-if="state.view === 'home'"></home-view>
 			<rules-view v-if="state.view === 'rules'"></rules-view>
-			<faq-view v-if="state.view === 'faq'"></faq-view>
-
+            <faq-view v-if="state.view === 'faq'"></faq-view>
+            <access-view v-if="state.view === 'login'"></access-view>
 			<setup-view
 				v-if="state.view === 'setup'"
 				:room-code="state.gameState === undefined ? undefined : state.gameState.roomCode"
