update html title

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Fake Artist Online</title>
+		<title>Online Deduction Drawing Game</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			name="description"
